K8s/healthcare-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthcare-api
  template:
    metadata:
      labels:
        app: healthcare-api
    spec:
      serviceAccountName: healthcare-api
      containers:
        - name: healthcare-api
          image: 990117608791.dkr.ecr.ap-southeast-2.amazonaws.com/healthcare-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: healthcare-api
  namespace: default
spec:
  selector:
    app: healthcare-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
